--- a/styles/index.css
+++ b/styles/index.css
@@ -8,6 +8,7 @@ body{
     align-items: center;
     justify-content: center;
     height: 100vh;
+    width: 100vw;
 }
 #login{
     border: 1px gray solid;
@@ -17,6 +18,7 @@ body{
     border-radius: 10px;
 }
 h3{
+    height: 10px;
     margin: 25px;
     text-align: center;
     color: var(--AzulEsverdiado);
