--- a/styles/index.css
+++ b/styles/index.css
@@ -17,6 +17,7 @@ body{
     background-color: white;
     border-radius: 10px;
 }
+
 h3{
     height: 10px;
     margin: 25px;
@@ -42,6 +43,7 @@ h3:hover::after{
     height: 2px;
     transition: 0.5s all ease-in-out;
 }
+
 img{
     width: 100px;
     height: 100px;
@@ -52,6 +54,7 @@ img:hover{
     transform: scale(1.10); 
     transition: 1s all ease;
 }
+
 label{
     display: block;
     width: 80%;
@@ -61,11 +64,18 @@ label{
 input{  
     width: 100%;
 }
-a{
-    font-size: small;
-    margin: 10px auto;
-    display: block;
+
+#fraseCadastro{
     width: 80%;
+    margin: 0 auto;
+    font-size: 10px;
+    opacity: 0.8;
+    text-align: end;
+}
+a{
+    width: 20%;
+    margin: 10px auto;
+    font-size: 10px;
     text-align: end;
     opacity: 0.8;
 }
@@ -104,4 +114,17 @@ a:hover{
 }
 #botaoAtivado:hover{
     transition: 1s all ease;
+}
+
+#mensagemErro{
+    width: 100%;
+    height: 20px;
+    margin: 0 auto 10px auto;
+    text-align: center;
+}
+
+#textoErro  {
+    margin: 0;
+    font-size: 10px;
+    color: crimson;
 }
