--- a/styles/global.css
+++ b/styles/global.css
@@ -1,7 +1,35 @@
-body{
-    padding: 0;
+/* Define a base de cálculo: 1rem = 10px */
+html {
+    font-size: 62.5%;
+}
+
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    width: 100vw;
     margin: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    box-sizing: border-box; 
     background-color: #EEEEEE;
-}   
+}
+
+/* Garante que todos os elementos usem o box-sizing do body */
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+
+/* Adicionando tamanhos de fonte base para elementos de formulário */
+label, 
+input, 
+button {
+    font-size: 1.6rem; /* 16px */
+}
+
+input {
+    padding: 0.8rem; /* 8px */
+    border: 1px solid #ccc;
+    border-radius: 0.4rem; /* 4px */
+}
